--- a/frontend_customer/src/index.css
+++ b/frontend_customer/src/index.css
@@ -3,6 +3,7 @@
 body {
   margin: 0;
   padding: 0;
+  min-height: 100vh !important;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -16,6 +17,7 @@ code {
 }
 
 body, html {
-  height: 100%;
   margin: 0;
+  overflow: auto;
+  overflow-y:scroll;
 }
