--- a/frontend_customer/src/style.css
+++ b/frontend_customer/src/style.css
@@ -1,11 +1,13 @@
 #mainheader {
   margin: auto;
   text-align: center;
+  color: white;
 }
 
 #dishname {
   margin: auto;
   text-align: center;
+  color: white;
 }
 
 #image {
@@ -14,6 +16,9 @@
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+  border: 3px solid #ddd; /* Gray border */
+  border-radius: 4px;  /* Rounded border */
+  padding: 5px; /* Some padding */
   /* width: 50%; */
 }
 
