changed result comp

--- a/frontend_customer/src/style.css
+++ b/frontend_customer/src/style.css
@@ -1,13 +1,22 @@
 #mainheader {
   margin: auto;
   text-align: center;
-  color: white;
+  color:black;
+  font-family: 'Satisfy', cursive;
+
 }
 
 #dishname {
   margin: auto;
   text-align: center;
+  color:black;
+}
+
+#reward {
+  text-align: center;
   color: white;
+  background-color: darkslategrey;
+  border-radius: 15px;
 }
 
 #image {
@@ -16,15 +25,44 @@
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  border: 3px solid #ddd; /* Gray border */
+  border: 5px solid darkred; /* Gray border */
   border-radius: 4px;  /* Rounded border */
   padding: 5px; /* Some padding */
   /* width: 50%; */
 }
 
 
+
+
+
 #card{
   margin: auto;
   width: 60%;
   padding: 10px;
+  border-radius: 25px;
+  padding: .75rem 1.25rem;
+  margin-bottom: 0;
+  background-color: rgb(186, 187, 183);
+  border-bottom: 1px solid rgba(0,0,0,.125);
+
+  &:first-child {
+    @include border-radius($card-inner-border-radius $card-inner-border-radius 0 0);
+  }
+
+  + .list-group {
+    .list-group-item:first-child {
+      border-top: 0;
+    }
+  }
 }
+
+.card-footer {
+  padding: $card-spacer-y $card-spacer-x;
+  background-color: $card-cap-bg;
+  border-top: $card-border-width solid $card-border-color;
+
+  &:last-child {
+    @include border-radius(0 0 $card-inner-border-radius $card-inner-border-radius);
+  }
+}
+
